--- a/_quarto.yaml
+++ b/_quarto.yaml
@@ -34,9 +34,9 @@ website:
       - icon: github
         menu:
           - text: Source Code
-            href:  https://code.com
+            href:  https://github.com/paytonej/card-lab-website
           - text: Report a Bug
-            href:  https://bugs.com
+            href:  https://github.com/paytonej/card-lab-website/issues
 			
   sidebar:
     - title: "People"
